--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -7,6 +7,21 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Things that I need</h1>
+    <h1>Things that I need:</h1>
+    <table>
+      {%for item in items%}
+      <tr>
+        {%if item.done %}
+        <td><strike>{{item.name}}</strike></td>
+        {%else %}
+        <td>{{item.name}}</td>
+        {%endif %}
+      </tr>
+      {%empty%}
+      <tr>
+        <td>You have nothing to do.</td>
+      </tr>
+      {%endfor%}
+    </table>
   </body>
 </html>
