add item to database

--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -19,9 +19,10 @@
       </tr>
       {%empty%}
       <tr>
-        <td>You have nothing to do.</td>
+        <td>You have nothing to do.</td >
       </tr>
       {%endfor%}
     </table>
+    <a href="/add">Add an Item</a>
   </body>
 </html>
