--- a/todo/templates/todo/edit_item.html
+++ b/todo/templates/todo/edit_item.html
@@ -7,12 +7,12 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Add a Todo Item:</h1>
-    <form action="add" method="POST">
+    <h1>Edit a Todo Item:</h1>
+    <form method="POST">
       {% csrf_token %} {{form}}
       <div>
         <p>
-          <button type="submit">Add Item</button>
+          <button type="submit">Update Item</button>
         </p>
       </div>
     </form>
